Simplify retain and dispose safeguards